--- a/slackstacking/build.gradle
+++ b/slackstacking/build.gradle
@@ -9,11 +9,14 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     mavenCentral()
 }
+
+mainClassName = "com.ibm.ws.slackstacking.SlackStacker"
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
