--- a/slackstacking/build.gradle
+++ b/slackstacking/build.gradle
@@ -16,7 +16,7 @@ repositories {
     mavenCentral()
 }
 
-mainClassName = "com.ibm.ws.slackstacking.SlackStacker"
+mainClassName = "uk.co.azquelt.slackstacker.SlackStacker"
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
