Improve detection of old questions
Extract the logic for filtering out old questions into a new class.
This modifies the state file format as we need to store the creation
date of questions which we've seen.

--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'org.apache.cxf:cxf-rt-rs-client:3.0.+'
     
     testCompile 'junit:junit:4.+'
+    testCompile 'org.hamcrest:hamcrest-all:1.+'
 }
